--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -10,6 +10,7 @@ android {
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
+        resConfigs "en", "es", "it-rIT"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         buildConfigField STRING, STRIPE_API_CLIENT_KEY_FIELD, NULL
